syntax = "proto3";

package test.extensions.filters.listener.original_src;

import "envoy/extensions/filters/listener/original_src/v3/original_src.proto";
import "test/extensions/filters/listener/common/fuzz/listener_filter_fuzzer.proto";
import "buf/validate/validate.proto";

message OriginalSrcTestCase {
  envoy.extensions.filters.listener.original_src.v3.OriginalSrc config = 1
      [(buf.validate.field).required = true];
  test.extensions.filters.listener.FilterFuzzTestCase fuzzed = 2
      [(buf.validate.field).required = true];
}
